<resources>
    <string name="app_name">Customer</string>

    <string name="nameLabel">Name:</string>
    <string name="surnameLabel2">Surname:</string>
    <string name="sexLabe2">Sex:</string>
    <string name="dateOfBirth">Date of birth:</string>
    <string name="telephoneLabel">Phone:</string>
    <string name="addressLabel">Address:</string>
    <string name="emailLabel">Email:</string>
    <string name="descriptionLabel">Description:</string>

    <string name="userPic">User Picture</string>
    <string name="choosePic">Choose Pic Button</string>

    <string name="edit_action" />

    <string name="title_activity_edit">EditActivity</string>
    <string name="surnameLabel">Surname</string>
    <string name="radioMale">M</string>
    <string name="radioFemale">F</string>
    <string name="sexLabel">Sex</string>
    <string name="dateOfBirthLabel">Date of birth</string>

    <string name="saveButton">SAVE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_signup">SignupActivity</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">LovEat!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Mad Group 39</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signin_with_google">SIGNIN WITH GOOGLE</string>
    <string name="default_web_client_id">77895527913-sve5938bl6qg1uqarfuge2j2cgjj29mm.apps.googleusercontent.com</string>
    <string name="or">or</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="phone_number">Phone number:</string>
    <string name="our_suggestions">Our Suggestions</string>
    <string name="search_a_restaurant">Search a restaurant</string>
    <string name="all_restaurants">All restaurants</string>
    <string name="daily_food">Daily Food</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_daily_menu">DAILY MENU</string>
    <string name="category_menu">MENU</string>
    <string name="category_review">REVIEWS</string>
    <string name="restaurant">Restaurant</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="your_cart">Your Cart</string>
    <string name="amount">amount</string>
    <string name="your_orders">Your Orders</string>
    <string name="text_search_hint">\'Hamburger\' or \'restaurant name\'</string>

    <string name="category_pending_order">PENDING</string>
    <string name="category_completed_order">COMPLETED</string>
    <string name="your_favorite">Your Favorite</string>
    <string name="pending">PENDING</string>
    <string name="in_preparation">IN PREPARATION</string>
    <string name="delivered">DELIVERED</string>
    <string name="in_delivery">IN DELIVERY</string>
    <string name="rejected">REJECTED</string>
    <string name="review_your_order">REVIEW YOUR ORDER</string>


    <string-array name="time_orders">
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>
    </string-array>

    <string-array name="type_of_food">
        <item>CHINESE</item>
        <item>JAPANESE</item>
        <item>ITALIAN</item>
        <item>INDIAN</item>
        <item>PIZZA</item>
        <item>HAMBURGER</item>
        <item>FISH</item>
    </string-array>
</resources>
