<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tall_toolbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar_restaurant">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/userPic"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarProfile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nameLabel"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surnameLabel2"
                android:textSize="16sp"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexLabe2"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateOfBirth"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textViewTelephoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/telephoneLabel"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewTelephone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/addressLabel"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/textViewEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/emailLabel"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="18sp"></TextView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>