<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:id="@+id/coordinator"
    android:background="@color/light_background_color">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar"
            android:background="@color/light_background_color">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/food" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="140dp"
                android:fitsSystemWindows="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_search"
                    android:layout_width="270dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:src="@android:drawable/ic_menu_search" />

                <ImageButton
                    android:id="@+id/filter_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/baseline_filter_list_white_36" />

            </LinearLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <LinearLayout
                android:id="@+id/search_filter_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="MAX DISTANCE"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/seekbar_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="0km"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="TYPE OF FOOD"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:id="@+id/type_of_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp"
                android:text="@string/our_suggestions"
                android:textColor="@android:color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSuggested"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp"
                android:nestedScrollingEnabled="false" />

                <ProgressBar
                    android:id="@+id/progress_bar_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"/>
            </FrameLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp"
                android:text="@string/all_restaurants"
                android:textColor="@android:color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvNormal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:orientation="vertical" />

                <ProgressBar
                    android:id="@+id/progress_bar_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible" />

        </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>